Update Swagger host and schemes
