# main.go
@@ -4,7 +4,9 @@ import (
 	"log"
 	"net/http"
 	"os"
+	"time"
 
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/joho/godotenv"
 	"github.com/rohit1kumar/pgo/config"
@@ -22,7 +24,8 @@ import (
 // @contact.email <email>
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-// @host https://gin-ping.onrender.com
+// @host gin-ping.onrender.com
+// @schemes https http
 func init() {
 	godotenv.Load()
 	config.ConnectToDB()
@@ -31,6 +34,16 @@ func init() {
 func main() {
 	r := gin.Default()
 	r.SetTrustedProxies(nil)
+
+	corsConfig := cors.DefaultConfig()
+	corsConfig.AllowAllOrigins = true
+	corsConfig.AllowMethods = []string{"POST", "GET", "PATCH", "DELETE", "OPTIONS"}
+	corsConfig.AllowHeaders = []string{"Origin", "Content-Type", "Authorization", "Accept", "User-Agent", "Cache-Control", "Pragma"}
+	corsConfig.ExposeHeaders = []string{"Content-Length"}
+	corsConfig.AllowCredentials = true
+	corsConfig.MaxAge = 12 * time.Hour
+
+	r.Use(cors.New(corsConfig))
 	docsURL := ginSwagger.URL("/docs/doc.json")
 
 	r.GET("/", func(c *gin.Context) {
